RESOLVED FIXED138082
REGRESSION (r174985-174986): Site display disappears
https://bugs.webkit.org/show_bug.cgi?id=138082
Summary REGRESSION (r174985-174986): Site display disappears
Jim Oase
Reported 2014-10-26 07:25:29 PDT
This address will result in nothing displayed http://www.golfnow.com/phoenix See attached
Attachments
Screen shot of results (80.19 KB, image/jpeg)
2014-10-26 07:26 PDT, Jim Oase
no flags
Patch (6.76 KB, patch)
2014-11-05 17:41 PST, Michael Saboff
ggaren: review+
Another site that goes blank... http://www.bobistheoilguy.com/castrol-edge-qa/ (83.68 KB, image/jpeg)
2014-11-20 08:00 PST, Jim Oase
no flags
Screen shoot of failure... with build number (175.83 KB, image/jpeg)
2014-11-21 20:21 PST, Jim Oase
no flags
Most recently build... problem persists (173.08 KB, image/jpeg)
2014-11-21 20:30 PST, Jim Oase
no flags
Jim Oase
Comment 1 2014-10-26 07:26:45 PDT
Created attachment 240464 [details] Screen shot of results
Simon Fraser (smfr)
Comment 2 2014-10-27 20:31:06 PDT
The site loads fine for me in Safari 8. Do you have any Safari extensions installed?
Jim Oase
Comment 3 2014-10-27 21:00:05 PDT
(In reply to comment #2) > The site loads fine for me in Safari 8. Do you have any Safari extensions > installed? Yes DivX Content Upload Plug-In DivX Content Upload Plug-In: Uploads DivX video in your browser! — from file “ContentUploaderPlugin.plugin”. MIME Type Description Extensions application/x-divxcontentupload DivX VOD Helper Plug-in DivX VOD Helper Plug-in — from file “OVSHelper.plugin”. MIME Type Description Extensions application/x-divxovshelper DivX OVS Helper Plug-in app Flip4Mac Windows Media Plugin The Flip4Mac WMV Plugin allows you to view Windows Media content using QuickTime. — from file “Flip4Mac WMV Plugin.plugin”. MIME Type Description Extensions application/asx Windows Media Plugin application/x-mplayer2 Windows Media Plugin application/x-ms-wmp Windows Media Plugin audio/x-ms-wax Windows Media Playlist wax audio/x-ms-wma Windows Media Audio wma video/x-ms-asf Windows Media Video asf video/x-ms-asf-plugin Windows Media Plugin video/x-ms-asx Windows Media Playlist asx video/x-ms-wm Windows Media Video wm video/x-ms-wmp Windows Media Video wmp video/x-ms-wmv Windows Media Video wmv video/x-ms-wmx Windows Media Playlist wmx video/x-ms-wvx Windows Media Playlist wvx Google Earth Plug-in The Google Earth Plugin allows you to view 3D imagery and terrain in your web browser. — from file “Google Earth Web Plug-in.plugin”. MIME Type Description Extensions application/geplugin Google Earth browser plugin iPhotoPhotocast iPhoto6 — from file “iPhotoPhotocast.plugin”. MIME Type Description Extensions application/photo iPhoto 700 LizardTech, Inc DjVu Plug-in 6.1 The DjVu plug-in allows you to view DjVu files. For more information, visit the LizardTech web site. — from file “NPDjVu.plugin”. MIME Type Description Extensions image/djvu DjVu file djvu,djv image/vnd.djvu DjVu file djvu,djv image/x-dejavu DjVu file djvu,djv image/x-djvu DjVu file djvu,djv image/x-iw44 iw44 image file iw44,iw4 image/x.djvu DjVu file djvu,djv QuickTime Plug-in 7.7.3 The QuickTime Plugin allows you to view a wide variety of multimedia content in web pages. For more information, visit the QuickTime Web site. — from file “QuickTime Plugin.plugin”. MIME Type Description Extensions application/sdp SDP stream descriptor sdp application/x-mpeg AMC media amc application/x-rtsp RTSP stream descriptor rtsp,rts application/x-sdp SDP stream descriptor sdp audio/3gpp 3GPP media 3gp,3gpp audio/3gpp2 3GPP2 media 3g2,3gp2 audio/aac AAC audio aac,adts audio/aiff AIFF audio aiff,aif,aifc,cdda audio/amr AMR audio amr audio/basic uLaw/AU audio au,snd,ulw audio/mp3 MP3 audio mp3,swa audio/mp4 MPEG-4 media mp4 audio/mpeg MPEG audio mpeg,mpg,m1s,m1a,mp2,mpm,mpa,m2a,mp3,swa audio/mpeg3 MP3 audio mp3,swa audio/vnd.qcelp QUALCOMM PureVoice audio qcp audio/wav WAVE audio wav,bwf audio/x-aac AAC audio aac,adts audio/x-aiff AIFF audio aiff,aif,aifc,cdda audio/x-caf CAF audio caf audio/x-gsm GSM audio gsm audio/x-m4a AAC audio m4a audio/x-m4b AAC audio book m4b audio/x-m4p AAC audio (protected) m4p audio/x-mp3 MP3 audio mp3,swa audio/x-mpeg MPEG audio mpeg,mpg,m1s,m1a,mp2,mpm,mpa,m2a,mp3,swa audio/x-mpeg3 MP3 audio mp3,swa audio/x-sd2 Sound Designer II sd2 audio/x-wav WAVE audio wav,bwf video/3gpp 3GPP media 3gp,3gpp video/3gpp2 3GPP2 media 3g2,3gp2 video/avi Video For Windows (AVI) avi,vfw video/mp4 MPEG-4 media mp4 video/mpeg MPEG media mpeg,mpg,m1s,m1v,m1a,m75,m15,mp2,mpm,mpv,mpa video/msvideo Video For Windows (AVI) avi,vfw video/quicktime QuickTime Movie mov,qt,mov,qt,mqv video/sd-video SD video sdv video/x-dv Digital video (DV) dv,dif video/x-m4v Video (protected) m4v video/x-mpeg MPEG media mpeg,mpg,m1s,m1v,m1a,m75,m15,mp2,mpm,mpv,mpa video/x-msvideo Video For Windows (AVI) avi,vfw Shockwave Flash Shockwave Flash 15.0 r0 — from file “Flash Player.plugin”. MIME Type Description Extensions application/futuresplash FutureSplash Player spl application/x-shockwave-flash Shockwave Flash swf Shockwave for Director Adobe Shockwave for Director Netscape plug-in, version 12.1.2 — from file “DirectorShockwave.plugin”. MIME Type Description Extensions application/x-director Shockwave for Director dcr,dir,dxr Silverlight Plug-In 4.0.51204.0 — from file “Silverlight.plugin”. MIME Type Description Extensions application/x-silverlight Microsoft Silverlight xaml application/x-silverlight-2 Microsoft Silverlight xaml
Simon Fraser (smfr)
Comment 4 2014-10-27 21:12:23 PDT
I mean Safari extensions (e.g. AdBlock), not plug-ins. You can disable extensions in the Safari prefs.
Jim Oase
Comment 5 2014-10-27 21:14:44 PDT
None.....
Simon Fraser (smfr)
Comment 6 2014-10-27 21:35:31 PDT
What if you disable plug-ins? Does the problem persist in a new user account?
Jim Oase
Comment 7 2014-10-27 21:43:06 PDT
(In reply to comment #6) > What if you disable plug-ins? Does the problem persist in a new user account? Not sure... tell me how to disable plug-ins.
Simon Fraser (smfr)
Comment 8 2014-10-27 22:41:24 PDT
Safari Security Prefs pane, botton checkbox.
Jim Oase
Comment 9 2014-10-27 22:44:47 PDT
(In reply to comment #8) > Safari Security Prefs pane, botton checkbox. Same problem.... page initially displays site and the screen goes white.
Jim Oase
Comment 10 2014-10-28 21:06:41 PDT
(In reply to comment #9) > (In reply to comment #8) > > Safari Security Prefs pane, botton checkbox. > > Same problem.... page initially displays site and the screen goes white. Problem continues with Version 8.0 (10600.1.25, r175271) the most recently build.
Simon Fraser (smfr)
Comment 11 2014-10-29 11:30:24 PDT
Your report confused me. This is a post-Safari 8 regression. http://trac.webkit.org/log/trunk/?rev=174986&stop_rev=174985 I would guess http://trac.webkit.org/changeset/174985.
Radar WebKit Bug Importer
Comment 12 2014-10-29 11:31:44 PDT
Tim Horton
Comment 14 2014-11-02 19:43:49 PST
Also the entire Elder Scrolls wiki (eg. http://elderscrolls.wikia.com/wiki/Cyrodilic_Brandy_(Oblivion) )
Michael Saboff
Comment 15 2014-11-05 17:41:17 PST
Geoffrey Garen
Comment 16 2014-11-05 17:47:46 PST
Comment on attachment 241076 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=241076&action=review Did you discover why this website need this behavior, and can't handle a newly-created write function? > Source/WebCore/bindings/js/JSHTMLDocumentCustom.cpp:126 > +static Document* findOwningDocument(ExecState* exec) A better name for this would be "findCallerDocument".
Michael Saboff
Comment 17 2014-11-05 18:49:12 PST
(In reply to comment #16) > Comment on attachment 241076 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=241076&action=review > > Did you discover why this website need this behavior, and can't handle a > newly-created write function? I haven't determined that yet, but given that this appears to break multiple websites, I wanted to post for review. I'll work on that tomorrow. > > Source/WebCore/bindings/js/JSHTMLDocumentCustom.cpp:126 > > +static Document* findOwningDocument(ExecState* exec) > > A better name for this would be "findCallerDocument". I'll make that change.
Simon Fraser (smfr)
Comment 18 2014-11-05 19:10:01 PST
Comment on attachment 241076 [details] Patch Why no layout test?
Michael Saboff
Comment 19 2014-11-06 08:44:31 PST
(In reply to comment #18) > Comment on attachment 241076 [details] > Patch > > Why no layout test? I will add a layout test.
Geoffrey Garen
Comment 20 2014-11-06 10:40:35 PST
Comment on attachment 241076 [details] Patch I'm going to say that it's OK to land this patch now without a test because TOT is super broken. However, please make your very next patch the regression test for this.
Michael Saboff
Comment 21 2014-11-06 11:47:09 PST
Michael Saboff
Comment 22 2014-11-06 11:50:34 PST
Filed <https://bugs.webkit.org/show_bug.cgi?id=138470> _ "Add test for fix of REGRESSION (r174985-174986): Site display disappears" to track adding a test.
Jim Oase
Comment 23 2014-11-10 23:06:35 PST
Good Job.... works on MBP Thanks Jim
Jim Oase
Comment 24 2014-11-20 08:00:28 PST
Darin Adler
Comment 25 2014-11-21 20:15:45 PST
(In reply to comment #24) > Another site that goes blank... > http://www.bobistheoilguy.com/castrol-edge-qa/ A site that was going blank *before* the fix? Or a site that now goes blank even after the fix? If it's after, then I think it's a different bug.
Jim Oase
Comment 26 2014-11-21 20:21:56 PST
Created attachment 242102 [details] Screen shoot of failure... with build number
Darin Adler
Comment 27 2014-11-21 20:30:20 PST
OK, so a different bug. Please file a new bug report!
Jim Oase
Comment 28 2014-11-21 20:30:43 PST
Created attachment 242103 [details] Most recently build... problem persists
Darin Adler
Comment 29 2014-11-21 20:37:35 PST
Jim, I’m really confused. Did the fix work at all, or is http://www.golfnow.com/phoenix still blank?
Jim Oase
Comment 30 2014-11-21 21:04:17 PST
(In reply to comment #29) > Jim, I’m really confused. Did the fix work at all, or is > http://www.golfnow.com/phoenix still blank? No longer blank, the golfnow screen works correctly.... sorry I got the second blank screen problem confused with the first blank screen problem.
Michael Saboff
Comment 31 2014-11-21 22:48:52 PST
(In reply to comment #25) > (In reply to comment #24) > > Another site that goes blank... > > http://www.bobistheoilguy.com/castrol-edge-qa/ > > A site that was going blank *before* the fix? Or a site that now goes blank > even after the fix? If it's after, then I think it's a different bug. This is a new bug. The prior bug was that we didn't properly write to the document, no crash involved. For http://www.bobistheoilguy.com/castrol-edge-qa/, we are crashing. I files <https://bugs.webkit.org/show_bug.cgi?id=139000> - "r176455: ASSERT(!m_vector.isEmpty()) in IntendedStructureChain.cpp(143)"
Note You need to log in before you can comment on or make changes to this bug.