Source/WebCore/bindings/js/JSHTMLDocumentCustom.cpp
@@ -41,6 +41,7 @@
 #include "JSMainThreadExecState.h"
 #include "SegmentedString.h"
 #include "DocumentParser.h"
+#include <interpreter/StackVisitor.h>
 #include <runtime/Error.h>
 #include <runtime/JSCell.h>
 #include <wtf/unicode/CharacterNames.h>
@@ -64,14 +65,6 @@ bool JSHTMLDocument::getOwnPropertySlot(JSObject* object, ExecState* exec, Prope
 
     if (propertyName == "open") {
         slot.setCustom(thisObject, ReadOnly | DontDelete | DontEnum, nonCachingStaticFunctionGetter<jsHTMLDocumentPrototypeFunctionOpen, 2>);
-        return true;
-    }
-    if (propertyName == "write") {
-        slot.setCustom(thisObject, ReadOnly | DontDelete | DontEnum, nonCachingStaticFunctionGetter<jsHTMLDocumentPrototypeFunctionWrite, 1>);
-        return true;
-    }
-    if (propertyName == "writeln") {
-        slot.setCustom(thisObject, ReadOnly | DontDelete | DontEnum, nonCachingStaticFunctionGetter<jsHTMLDocumentPrototypeFunctionWriteln, 1>);
         return true;
     }
 
@@ -130,6 +123,17 @@ void JSHTMLDocument::setAll(ExecState* exec, JSValue value)
     putDirect(exec->vm(), Identifier(exec, "all"), value);
 }
 
+static Document* findCallingDocument(ExecState* exec)
+{
+    CallerFunctor functor;
+    exec->iterate(functor);
+    CallFrame* callerFrame = functor.callerFrame();
+    if (!callerFrame)
+        return nullptr;
+
+    return asJSDOMWindow(functor.callerFrame()->lexicalGlobalObject())->impl().document();
+}
+
 // Custom functions
 
 JSValue JSHTMLDocument::open(ExecState* exec)
@@ -161,8 +165,9 @@ JSValue JSHTMLDocument::open(ExecState* exec)
 
 enum NewlineRequirement { DoNotAddNewline, DoAddNewline };
 
-static inline void documentWrite(ExecState* exec, HTMLDocument* document, NewlineRequirement addNewline)
+static inline void documentWrite(ExecState* exec, JSHTMLDocument* thisDocument, NewlineRequirement addNewline)
 {
+    HTMLDocument* document = &thisDocument->impl();
     // DOM only specifies single string argument, but browsers allow multiple or no arguments.
 
     size_t size = exec->argumentCount();
@@ -182,19 +187,19 @@ static inline void documentWrite(ExecState* exec, HTMLDocument* document, Newlin
     if (addNewline)
         segmentedString.append(SegmentedString(String(&newlineCharacter, 1)));
 
-    Document* activeDocument = asJSDOMWindow(exec->lexicalGlobalObject())->impl().document();
+    Document* activeDocument = findCallingDocument(exec);
     document->write(segmentedString, activeDocument);
 }
 
 JSValue JSHTMLDocument::write(ExecState* exec)
 {
-    documentWrite(exec, &impl(), DoNotAddNewline);
+    documentWrite(exec, this, DoNotAddNewline);
     return jsUndefined();
 }
 
 JSValue JSHTMLDocument::writeln(ExecState* exec)
 {
-    documentWrite(exec, &impl(), DoAddNewline);
+    documentWrite(exec, this, DoAddNewline);
     return jsUndefined();
 }
 
